--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
 
         <div class="top-main">
             <div class="left-main">
-                <h1>Your Health, Our Priority</h1>
+                <h1>Don't Let Your Health Take a Backseat!</h1>
                 <h3>Compassionate care, advanced medicine, and trusted specialists available 24/7</h3>
                 <button>
                     Book an Appointment
@@ -40,9 +40,13 @@
             </div>
 
             <div class="right-main">
-                <img src="https://img.freepik.com/premium-photo/immaculate-welllit-pharmacy-aisle-showcasing-meticulously-organized-shelves-medicines-health-products-exudes-clean-modern-aesthetic_95891-127346.jpg?w=2000"
-                    alt="">
+                <img src="isometric-medical-diagnostic-hospital-health-care-vector-39726194-removebg-preview.png" alt="">
             </div>
+        </div>
+
+        <div class="departaments">
+            <p>OUR DEPARTAMENTS</p>
+            <h1>For Your Health</h1>
         </div>
         <div class="bottom-main">
             <img src="kidney.png" alt="">
@@ -52,11 +56,57 @@
             <img src="brain.png" alt="">
             <img src="arthritis.png" alt="">
         </div>
+
+        <div class="text">
+            <h4>We Serve In Different Areas For Our Patients</h4>
+        </div>
     </main>
-    <hr>
 
-    <footer>
+    <footer class="footer">
 
+        <div>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+        </div>
+
+        <div>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+        </div>
+
+        <div>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+        </div>
+
+        <div>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+            <p>lorem</p>
+        </div>
     </footer>
 </body>
 
