--- a/reviews.html
+++ b/reviews.html
@@ -1,48 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reviews</title>
     <link rel="stylesheet" href="stili.css">
 </head>
-<body background="image copy.png">
-     <div class="re"><a href="Project.html">↩</a>
+
+<body background="image copy.png" class="r.body">
+
+    <div class="re">
+        <a href="Login.html">↩</a>
     </div>
-     <div class="Review">
+
+    <div class="Review">
         <h1><strong>Review Our Service</strong></h1>
         <h3><em>We appreciate your feedback!</em></h3>
+
         <form class="box">
-        <label for=""><strong>Your Name</strong></label><br>
-        <input type="text" placeholder="Your Name"><br>
-        <label for=""><strong>Email Address</strong></label><br>
-        <input type="email" placeholder="Your email"><br> <br>
-            </form>
+            <label for=""><strong>Your Name</strong></label><br>
+            <input type="text" placeholder="Your Name"><br>
+            <label for=""><strong>Email Address</strong></label><br>
+            <input type="email" placeholder="Your email"><br> <br>
+        </form>
+
         <label><strong>Overall Rating</strong></label><br>
+
         <label>How would you rate your Overall experience?</label><br>
+
         <div class="mood">
             <label for="">★ ★ ★ ★ ★</label>
         </div><br><br>
 
         <label><strong>Satisfaction Level</strong></label><br>
+
         <div class="mood">
             <label for="">😄 🙂 😐 ☹️ 😠 </label>
         </div><br><br>
 
-             <label><strong>Feedback</strong></label><br><br>
+        <label><strong>Feedback</strong></label><br><br>
         <label for=""><textarea placeholder="Please share your experience with us"></textarea></label> <br><br>
-        
-        <label for="" > <strong><i>Would you recommend us to a friend?</i></strong></label>
+        <label for=""> <strong><i>Would you recommend us to a friend?</i></strong></label>
+
         <div class="radio">
             <label class="r1"><input type="radio" name="option"> Yes</label>
             <label class="r2"><input type="radio" name="option"> No</label>
             <label class="r3"><input type="radio" name="option"> Other</label>
-     </div>
-            <br>
+        </div>
+
+        <br>
+
         <button>Submit Review</button>
         </label>
     </div>
-    
-   
+
+
 </body>
+
 </html>
