--- a/Services.html
+++ b/Services.html
@@ -27,10 +27,11 @@
          <div class="s-left-header">
              <h1>Our Medical Services</h1>
              <h4>We offer a wide range of modern medical services designed to provide you with professional, safe, and fast healthcare</h4>
+             <button>Learn More <a href="services_details.html" title="" > <img src="right-arrow.png" alt=""></a></button>
          </div>
 
          <div class="s-right-header">
-            <img src="https://i.pinimg.com/474x/a5/2c/50/a52c509a89f7463f7561b9146141cee4--memorial-hospital-the-hospital.jpg" alt="">
+            <img src="tools.png" alt="">
          </div>
          </div>
     </header>
@@ -103,7 +104,44 @@
 
         </div>
 
-        <hr>
     </main>
+
+    <footer class="footer">
+
+        <div class="footer-container">
+
+            <div class="footer-section">
+                <h2>Contact Us</h2>
+                <ul>
+                    <li>Email: info@healup.com</li>
+                    <li>Phone: +355 69 123 4567</li>
+                    <li>Address: Rruga Arberia, Pristina</li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h2>Quick Links</h2>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Service Details</a></li>
+                    <li><a href="">Login</a></li>
+                    <li><a href="">Reviews</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section">
+                <h2>Follow Us</h2>
+                <ul>
+                    <li><a href="">Facebook</a></li>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">TikTok</a></li>
+                    <li><a href="">YouTube</a></li>
+                </ul>
+            </div>
+        </div>
+
+         <p class="footer-copy">  2025 HealUp. All rights reserved.</p>
+    </footer>
 </body>
 </html>
