home page changes

--- a/Home.html
+++ b/Home.html
@@ -62,51 +62,42 @@
         </div>
     </main>
 
-    <footer class="footer">
+   <footer class="footer">
 
-        <div>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-        </div>
+        <div class="footer-container">
 
-        <div>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-        </div>
+            <div class="footer-section">
+                <h2>Contact Us</h2>
+                <ul>
+                    <li>Email: info@healup.com</li>
+                    <li>Phone: +355 69 123 4567</li>
+                    <li>Address: Rruga Arberia, Pristina</li>
+                </ul>
+            </div>
 
-        <div>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-        </div>
+            <div class="footer-section">
+                <h2>Quick Links</h2>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Service Details</a></li>
+                    <li><a href="">Login</a></li>
+                    <li><a href="">Reviews</a></li>
+                </ul>
+            </div>
 
-        <div>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
-            <p>lorem</p>
+            <div class="footer-section">
+                <h2>Follow Us</h2>
+                <ul>
+                    <li><a href="">Facebook</a></li>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">TikTok</a></li>
+                    <li><a href="">YouTube</a></li>
+                </ul>
+            </div>
         </div>
+        
+         <p class="footer-copy">  2025 HealUp. All rights reserved.</p>
     </footer>
 </body>
 
