--- a/Home.html
+++ b/Home.html
@@ -18,12 +18,11 @@
         </div>
 
         <div class="right-nav">
-            <h4>Home</h4>
-            <h4>Service</h4>
-            <h4>About Us</h4>
-            <h4>Blog</h4>
-            <h4>Contact Us</h4>
-            <button>Sign In</button>
+      <h4><a href="Home.html">Home</a></h4>
+      <h4><a href="Services.html">Service</a></h4>
+      <h4><a href="services_details.html">Service Details</a></h4>
+      <h4><a href="about_us.html">About Us</a></h4>
+      <button><a href="Login.html">Log In</a></button>
         </div>
     </header>
 
