--- a/Home.html
+++ b/Home.html
@@ -33,7 +33,7 @@
                 <h1>Don't Let Your Health Take a Backseat!</h1>
                 <h3>Compassionate care, advanced medicine, and trusted specialists available 24/7</h3>
                 <button>
-                    Book an Appointment
+                    <a href="services_details.html">Book an appintment</a>
                     <img src="book-black-cover-closed_32354.png" alt="">
                 </button>
             </div>
