--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="signup-pag">
+<body class="signup-page">
 
   <div class="signup-box">
     <h1>Create Account</h1>
